# InrtoductionParallel

./: .clang-tidy  1  CMakeLists.txt  readme.md
chapter_01/: CMakeLists.txt  global_sum.cpp
chapter_02/: CMakeLists.txt  carlo_pi.cpp  histogram_bin.cpp  trap_integral.cpp
chapter_03/: CMakeLists.txt  hello_world.cpp  mpi_carlo_pi.cpp  mpi_histogram_bin.cpp  mpi_math.cpp  mpi_ping_pong.cpp  mpi_trap_integral.cpp
chapter_04/: CMakeLists.txt  thread_barrier.cpp  thread_hello_world.cpp  thread_histogram_bin.cpp  thread_list.cpp  thread_pi.cpp  thread_trap_integral.cpp
chapter_05/: CMakeLists.txt  omp_hello_world.cpp  omp_histogram_bin.cpp  omp_trap_integral.cpp
include/: helper.h  homework.h
include/exercises/: global_sum.h  hello_world.h
include/exercises/thread_safe_structure/: simple_thread_pool.h  thread_pool.h  thread_safe_list_queue.h  thread_safe_lookup_table.h  thread_safe_queue.h  thread_safe_stack.h
include/homework/: carlo_pi.h  histogram_bin.h  matrix_multi_vector.h  trap_integral.h
note/: homework.md
src/: CMakeLists.txt
src/exercises/: CMakeLists.txt  global_sum.cpp  hello_world.cpp
src/exercises/atm_csp/: CMakeLists.txt
src/exercises/atm_csp/include/atm/: atm.h  atm_handle_msg.h  atm_state.h
src/exercises/atm_csp/include/bank/: bank.h  bank_handle_msg.h  bank_state.h
src/exercises/atm_csp/include/dispatcher/: dispatcher.h  message.h  receiver.h  thread_safe_queue.h
src/exercises/atm_csp/include/fsm/: machine.h  state.h
src/exercises/atm_csp/include/msg_fsm/: msg_machine.h  msg_state.h
src/exercises/atm_csp/include/screen/: screen.h  screen_handle_msg.h  screen_state.h
src/exercises/atm_csp/src/: CMakeLists.txt  main.cpp
src/exercises/atm_csp/src/atm/: CMakeLists.txt  atm.cpp  atm_state.cpp
src/exercises/atm_csp/src/bank/: CMakeLists.txt  bank.cpp  bank_state.cpp
src/exercises/atm_csp/src/screen/: CMakeLists.txt  screen.cpp  screen_state.cpp
src/exercises/mpi/: CMakeLists.txt  mpi_math.cpp  mpi_ping_pong.cpp
src/exercises/thread/: CMakeLists.txt  thread_matrix.cpp  thread_message.cpp
src/exercises/thread_safe_structure/: CMakeLists.txt  show_simple_thread_pool_bug.cpp
src/homework/: CMakeLists.txt
src/homework/carlo_pi/: CMakeLists.txt  mpi.cpp  omp.cpp  thread.cpp
src/homework/histogram_bin/: CMakeLists.txt  mpi.cpp  omp.cpp  thread.cpp
src/homework/matrix_multi_vector/: CMakeLists.txt  mpi.cpp
src/homework/trap_integral/: CMakeLists.txt  mpi.cpp  omp.cpp  thread.cpp
test/: CMakeLists.txt
test/carlo_pi/: CMakeLists.txt  mpi_carlo_pi.cpp  omp_carlo_pi.cpp  thread_carlo_pi.cpp
test/exercises/: CMakeLists.txt  global_sum.cpp  mpi_hello_world.cpp  omp_hello_world.cpp  thread_hello_world.cpp
test/histogram_bin/: CMakeLists.txt  mpi_histogram_bin.cpp  omp_histogram_bin.cpp  thread_histogram_bin.cpp
test/matrix_multi_vector/: CMakeLists.txt  mpi_matrix_multi_vector.cpp
test/thread_safe_structure/: CMakeLists.txt  test_thread_pool.cpp  test_thread_safe_lookup_table.cpp
test/trap_integral/: CMakeLists.txt  mpi_trap_integral.cpp  omp_trap_integral.cpp  thread_trap_integral.cpp
