add_executable(thread_hello_world thread_hello_world.cpp)
add_executable(thread_pi thread_pi.cpp)
add_executable(thread_message thread_message.cpp)
add_executable(thread_barrier thread_barrier.cpp)
add_executable(thread_matrix thread_matrix.cpp)
add_executable(thread_histogram_bin thread_histogram_bin.cpp)
add_executable(thread_trap_integral thread_trap_integral.cpp)
